fix body overflow for ios, reset tap hightlight color

--- a/src/sass/partials/_modal.scss
+++ b/src/sass/partials/_modal.scss
@@ -1,5 +1,7 @@
 body.modal-open {
   overflow: hidden;
+  height: 100%;
+  position: fixed;
 }
 
 .modal-open .modal {
