--- a/src/sass/partials/_reset.scss
+++ b/src/sass/partials/_reset.scss
@@ -47,3 +47,11 @@ input, button {
     outline: none;
   }
 }
+
+input,
+textarea,
+button,
+select,
+a {
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+}
